# custom_memory_manager

./: CMakeLists.txt  INSTALL.md  README.md  conanfile.txt
.github/actions/building/: action.yml
.github/actions/cppcheck/: action.yml
.github/workflows/: QAWorkflow.yml
include/: utils.h
lib/memory/: CMakeLists.txt
src/: main.c
tests/: CMakeLists.txt
tests/unit/: test_memory.c
